<resources>
    <string name="app_name">ToDo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="warning_title">Warning!</string>
    <string name="warning_content">Are you sure? This can\'t be undone!</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="history_category">History</string>
    <string name="appearance_category">Appearance</string>
    <string name="data_category">Data</string>
    <string name="reminder_category">Reminder</string>
    <string name="others_category">Others</string>
    <string name="backup_data_key" translatable="false">backup_data_key</string>
    <string name="backup_data_title">Backup</string>
    <string name="backup_data_content">Backup your precious notes</string>
    <string name="backup_edit_text_hint">Enter a tag for your backup</string>
    <string name="backup_dialog_title">Backup..</string>
    <string name="backup_dialog_content1">Your backup will be saved at</string>
    <string name="backup_dialog_content2" translatable="false"> /ToDo/backup</string>
    <string name="backup_no_write_permission">Error saving the backup: No write permission!</string>
    <string name="backup_error">Backup error!</string>
    <string name="backup_select_path">Select a path for backup</string>
    <string name="backup_finished">Backup Finished!</string>
    <string name="path_selector_title">Please choose a directory to store your backup</string>
    <string name="selected_wrong_path">The selected directory does not support backup, pleas choose another one:(</string>
    <string name="select_backup_file_button_text">Select a backup</string>
    <string name="replace_all_checkbox">Replace current notes</string>
    <string name="restore_data_key" translatable="false">restore_data_key</string>
    <string name="restore_data_title">Restore</string>
    <string name="restore_data_content">Restore your previous notes from a backup</string>
    <string name="restore_dialog_title">Restore..</string>
    <string name="restore_dialog_content1">Restore your notes from </string>
    <string name="restore_dialog_content2">Backed up at: </string>
    <string name="restore_dialog_content_before">Choose a backup file to restore your notes</string>
    <string name="restore_error">Restore error :-/</string>
    <string name="restore_finished">Restore finished!</string>
    <string name="not_validate_backup">This is not a validate backup file!</string>
    <string name="err_msg">ERROR MESSAGE</string>
    <string name="pref_header_history">History Preferences</string>
    <string name="custom_frequency_key" translatable="false">custom_frequency</string>
    <string name="clear_frequency_choose_key" translatable="false">clear_frequency_choose_key</string>
    <string name="order_key" translatable="false">list_order_key</string>
    <string name="list_order_title">Latest notes on top</string>
    <string name="clear_history_switch_key" translatable="false">clear_history_switch_key</string>
    <string name="clear_history_switch_title">Clear History automatically</string>
    <string name="clear_history_switch_summary">Automatically delete history notes once they\'ve reached the frequency you set</string>
    <string name="default_custom_clear_frequency" translatable="false">24</string>
    <string name="custom_frequency_title">Custom frequency</string>
    <string name="clear_history_catagory_title">Clear History</string>
    <string name="clear_history_frequency">History clearing frequency</string>
    <string name="wipe_history">Wipe history</string>
    <string name="wipe_history_detail">Wipe all the history records!</string>
    <string name="wipe_history_key" translatable="false">wipe_history_key</string>
    <string name="clear_interval_num_key" translatable="false">clear_interval_num_key</string>
    <string name="clear_interval_value_key" translatable="false">clear_interval_value_key</string>
    <string name="clear_interval_unit_key" translatable="false">clear_interval_unit_key</string>
    <string name="clear_interval_unit_num_key" translatable="false">clear_interval_unit_num_key</string>
    <string name="clear_interval_summary_key" translatable="false">clear_interval_summary_key</string>
    <string name="clr_interval_dialog_title">History clear frequency</string>
    <string name="clr_interval_dialog_Message">Pick a time interval</string>
    <string name="disabled">Disabled</string>
    <string name="one_day">1 Day(s)</string>
    <string name="custom">Custom</string>
    <string name="custom_theme_key" translatable="false">custom_theme_key</string>
    <string name="selection_mode_title">" Selected"</string>
    <string name="material_indigo">Material Indigo</string>
    <string name="selection_mode_empty_title">Select items </string>
    <string name="email_subject">Feedback for ToDo</string>
    <string name="email_content">Feedback goes under here, if it\'s a bug, then please state the situation clearly so that we can fix it faster:)\n</string>
    <string name="important_tab_title">Important</string>
    <string name="main_tab_title">Main</string>
    <string name="clipboard_tab_title">Clipboard</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string-array name="interval_units">
        <item>Minute(s)</item>
        <item>Hour(s)</item>
        <item>Day(s)</item>
        <item>Week(s)</item>
        <item>Month(s)</item>
        <item>Year(s)</item>
    </string-array>
    <string-array name="clear_history_frequency_values" translatable="false">
        <item>0</item>
        <item>1800</item>
        <item>3600</item>
        <item>14400</item>
        <item>28800</item>
        <item>86400</item>
        <item>172800</item>
        <item>259200</item>
        <item>432000</item>
        <item>604800</item>
        <item>1209600</item>
        <item>2592000</item>
        <item>@string/custom</item>
    </string-array>
    <string name="input_hint_text">What\'s on your mind?</string>
    <string name="history_name">History</string>
    <string name="about_name">About</string>
    <string name="tags_selec_name">Tags</string>
    <string name="empty_history">Nothing finished yet…\nYour finished items will be here</string>
    <string name="empty_todolist">Got nothing ToDo?</string>
    <string name="empty_important_todolist">Got nothing important?</string>
    <string name="empty_tag_pt1">Tap \"+\" to create a new </string>
    <string name="empty_tag_pt2"> note.</string>
    <string name="empty_tag_selection">No tags used yet, add one now?</string>
    <string name="error_message">Something went wrong :-/</string>
    <string name="about">This is a light-weighted to-do list app that you can customize however you want, Enjoy! \nPlease support or rate if you want!\nBy Jack ;)</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="note_deleted_snack_text">Note Deleted</string>
    <string name="main_history_switch" translatable="false">main_history_switch</string>
    <string name="main_overdue_switch" translatable="false">main_overdue_switch</string>
    <string name="normal_overdue_switch" translatable="false">normal_overdue_switch</string>
    <string name="history_switch_title">History Records</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search…</string>
    <string name="history_switch_content">Keep history records</string>
    <string name="main_overdue_switch_title">Remind me of overdue tasks</string>
    <string name="main_overdue_switch_content_on">ToDo will actively remind you of overdue reminders/tasks</string>
    <string name="main_overdue_switch_content_off">ToDo won\'t actively remind you of overdue reminders/tasks</string>
    <string name="normal_overdue_switch_title">Remind me of all overdue tasks</string>
    <string name="normal_overdue_switch_content_on">ToDo will remind you of all overdue reminders/tasks</string>
    <string name="normal_overdue_switch_content_off">ToDo will only remind you of important overdue reminders/tasks</string>
    <string name="notification_settings" translatable="false">notification_settings</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="notification_settings_content">Set notification behaviors for reminders.</string>
    <string name="notification_light">notification_light</string>
    <string name="notification_light_title">Enable Reminder Blink Light</string>
    <string name="twenty_four_hour_mode_title">Use 24-hour format</string>
    <string name="twenty_four_hour_mode_content_on">13:00</string>
    <string name="twenty_four_hour_mode_content_off">1:00 PM</string>
    <string name="support_me">Support!</string>
    <string name="rate_this">Rate!</string>
    <string name="contact_me_first_part">"If you have any questions, suggestions or anything else you want, please contact me via my" "</string>
    <string name="feedback">Feedback &amp; Report</string>
    <string name="finish">Finish</string>
    <string name="exportnprint">Print/Export</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="font_setting_key">font_setting_key</string>
    <string name="font_setting_title">Font Settings</string>
    <string name="font_setting_content">Change font settings</string>
    <string name="font_monospace">Monospace</string>
    <string name="font_weight">Weight</string>
    <string name="font_italic">Italic</string>
    <string name="nav_share">Share</string>
    <string name="nav_remove_ad">Upgrade to ToDo+!</string>
    <string name="nav_about">About</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_more">More</string>
    <string name="theme_selector_title">Preset Themes</string>
    <string name="theme_selector_key" translatable="false">theme_selector_key</string>
    <string name="restore_purchase_key" translatable="false">restore_purchase_key</string>
    <string name="restore_purchase_title">Restore purchase</string>
    <string name="restore_purchase_summary">Restore your previous purchase</string>
    <string name="dark_theme_key" translatable="false">dark_theme_key</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="dark_theme_content">Change to a darker theme</string>
    <string name="theme_color_selector">Theme Color</string>
    <string name="theme_color_selector_content">Change the theme color</string>
    <string name="theme_color_key" translatable="false">theme_color_key</string>
    <string name="text_color_selector">Text Color</string>
    <string name="text_color_key" translatable="false">text_color_key</string>
    <string name="text_size_title">Text Size</string>
    <string name="text_size_content">Change the text size in the list</string>
    <string name="text_size_key" translatable="false">text_size_key</string>
    <string name="text_color_selector_content">Change the text color</string>
    <string name="background_color_selector">Background Color</string>
    <string name="background_color_key" translatable="false">background_color_key</string>
    <string name="background_color_selector_content">Change the background color</string>
    <string name="reset_appearance_key" translatable="false">reset_appearance_key</string>
    <string name="reset_appearance_content">Reset all Appearance settings to default</string>
    <string name="reset_appearance_title">Reset</string>
    <string name="licenses">Licenses</string>
</resources>