<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/selection_menu_finish"
        android:icon="@drawable/ic_done_black_24dp"
        app:showAsAction="always|withText"
        android:title="@string/finish" />
    <item
        android:id="@+id/selection_menu_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="always|withText"
        android:title="@string/delete" />
    <item
        android:id="@+id/selection_menu_share"
        android:icon="@drawable/ic_share_black_24dp"
        app:showAsAction="always|withText"
        android:title="@string/share"/>
    <item
        android:id="@+id/selection_menu_export"
        android:icon="@drawable/ic_print_black_24dp"
        app:showAsAction="always|withText"
        android:title="@string/exportnprint"/>
</menu>